# rs_file_reader

./: .gitignore  .project  README.md  gui_plot.json  pyproject.toml  requirements.txt
src/: gui_plot.json  start_gui.py
src/rs_file_reader/: __init__.py  __main__.py  gui_plot.json  rs_analysis.py  rs_file.py  rs_plot_gui.py  tool_box.py
tests/: unittests.py
tests/testdata/: 16bit_multichannel.csv  16bit_singlechannel.csv  FastSegmentation1_1.Wfm.csv  FastSegmentation1_1.csv  FastSegmentation2_1.Wfm.csv  FastSegmentation2_1.csv  MultiChanOffset.Wfm.csv  MultiChanOffset.csv  MultiChanOffsetPos.Wfm.csv  MultiChanOffsetPos.csv  SingleChanCh2OffsetPos.csv  XYMultichan.Wfm.csv  XYMultichan.csv  XYSinglechannel.Wfm.csv  XYSinglechannel.csv  aquisition_auto_1.Wfm.csv  aquisition_auto_1.csv  multiChan.csv  singleChan.csv  singleChanCh2.Wfm.csv  singleChanCh2.csv  singleChanCh2Offset.Wfm.csv  singleChanCh2Offset.csv
