[build-system]
requires = ['hatchling']
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/tests",
  "requirements.txt",
]
skip-excluded-dirs = true

[project]
name = "rs_file_reader"
version = "0.1.1"
authors = [
  { name="Simon Waid", email="simon.waid@oeaw.ac.at" },
]
description = "Utility for reading Rhode and Schwarz oscilloscope binary files"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
	"matplotlib >= 3.5.0",
	"numba >= 0.55.2",
	"numpy >= 1.21.4",
	"pandas >= 1.3.4",
	"PySide2 >= 5.15.2.1",
	"scipy >= 1.8.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]



[project.urls]
"Homepage" = "https://github.com/simonwaid/rs_file_reader"
"Bug Tracker" = "https://github.com/simonwaid/rs_file_reader/issues"